--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,4 +77,6 @@
     <string name="tv_changemessage">修改信息</string>
     <string name="tv_change">修改</string>
     <string name="tv_hour">/小时</string>
+    <string name="tv_inputphone">请输入手机号码</string>
+    <string name="tv_pleasecomfirmpassword">请确认密码</string>
 </resources>
