1.新增支付宝支付(完善)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,4 +94,5 @@
     <string name="title_activity_pay">PayActivity</string>
     <string name="s_confirmpay">确认支付</string>
     <string name="s_paytype">选择支付方式</string>
+    <string name="s_needpay">需要支付：</string>
 </resources>
